adding baseline component layout to support directive and HTML/DOM manipulation for people picker

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@
 /src/ajs.1/bin/Debug
 /src/ajs.1/bower_components/angular
 /src/ajs.2/npm-debug.log
+/src/ajs.1/AJSPP/AJSPPWeb/bin
+/src/ajs.2/bower_components
+/src/ajs.1/ajs.1.csproj.user
