--- a/src/ajs.2/package.json
+++ b/src/ajs.2/package.json
@@ -1,8 +1,60 @@
 {
-  "name": "myproject",
+  "name": "ajs-pnp-peoplepicker",
+  "description": "A component for injecting the people picker against a specific model property.",
   "version": "1.0.0",
+  "dependencies": {
+    "es6-promise": "^3.0.0",
+    "whatwg-fetch": "^0.11.0",
+    "moment": "2.14.1"
+  },
+  "peerDependencies": {
+    "@angular/common": "2.0.0-rc.4",
+    "@angular/compiler": "2.0.0-rc.4",
+    "@angular/core": "2.0.0-rc.4",
+    "@angular/forms": "0.2.0"
+  },
   "devDependencies": {
-    "angular2": "^2.0.0-beta.17",
-    "typings": "^1.3.1"
-  }
+    "@angular/common": "2.0.0-rc.4",
+    "@angular/compiler": "2.0.0-rc.4",
+    "@angular/core": "2.0.0-rc.4",
+    "@angular/forms": "0.2.0",
+    "@angular/platform-browser": "2.0.0-rc.4",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
+    "@angular/router": "3.0.0-beta.2",
+    "async": "2.0.0",
+    "bootstrap": "3.3.7",
+    "es6-shim": "0.35.1",
+    "es7-reflect-metadata": "1.6.0",
+    "gulp": "^3.9.1",
+    "gulp-debug": "^2.1.2",
+    "gulp-header": "1.8.2",
+    "gulp-istanbul": "^1.0.0",
+    "gulp-mocha": "^2.2.0",
+    "gulp-plumber": "^1.0.1",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-spsave": "^2.0.0",
+    "gulp-tslint": "6.0.2",
+    "gulp-typedoc": "^2.0.0",
+    "gulp-typescript": "^2.11.0",
+    "gulp-uglify": "^1.5.3",
+    "reflect-metadata": "0.1.3",
+    "require-dir": "0.3.0",
+    "rxjs": "5.0.0-beta.6",
+    "tslint": "3.14.0",
+    "typedoc": "0.4.4",
+    "typescript": "^1.8.10",
+    "typings": "1.3.1",
+    "zone.js": "0.6.12"
+  },
+  "scripts": {
+    "typedoc": "typedoc",
+    "flow.docs": "npm run typedoc -- --exclude '**/*.spec.ts' ./components/",
+    "flow.copy:src": "./node_modules/.bin/cpy ng2-bootstrap.ts \"components/*.ts\" ts --parents",
+    "flow.eslint": "./node_modules/.bin/eslint --ignore-path .gitignore  --ext js --fix . .config",
+    "flow.tslint": "./node_modules/.bin/gulp lint",
+    "test": "gulp test",
+    "postinstall": "typings install"
+  },
+  "main": "ajs2-bootstrap.js",
+  "typings": "ajs2-bootstrap.d.ts"
 }
