--- a/src/ajs.2/package.json
+++ b/src/ajs.2/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "es6-promise": "^3.0.0",
     "whatwg-fetch": "^0.11.0",
-    "moment": "2.14.1"
+    "moment": "2.14.1",
+    "jquery-1x": "1.12.1"
   },
   "peerDependencies": {
     "@angular/common": "2.0.0-rc.4",
@@ -18,6 +19,7 @@
     "@angular/compiler": "2.0.0-rc.4",
     "@angular/core": "2.0.0-rc.4",
     "@angular/forms": "0.2.0",
+    "@angular/http": "2.0.0-rc.4",
     "@angular/platform-browser": "2.0.0-rc.4",
     "@angular/platform-browser-dynamic": "2.0.0-rc.4",
     "@angular/router": "3.0.0-beta.2",
@@ -25,6 +27,8 @@
     "bootstrap": "3.3.7",
     "es6-shim": "0.35.1",
     "es7-reflect-metadata": "1.6.0",
+    "gh-pages": "0.11.0",
+    "gitignore-to-glob": "0.2.1",
     "gulp": "^3.9.1",
     "gulp-debug": "^2.1.2",
     "gulp-header": "1.8.2",
