--- a/src/ajs-sp-addInWeb/Web.config
+++ b/src/ajs-sp-addInWeb/Web.config
@@ -9,10 +9,19 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-
+    <add key="ClientSecret" value="4GB8RuFeXLlGeFmlFaX7OYrSaUnEvEp/b86AxrtjNDA=" />
+    <add key="ClientId" value="4abfb546-9e0e-418a-8cf2-49dfd9cf927e" />
   </appSettings>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.6.1" />
+      </system.Web>
+  -->
   <system.web>
-    <compilation debug="true" targetFramework="4.5" />
+    <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
   <runtime>
@@ -56,10 +65,14 @@
         <binding name="secureBinding">
           <security mode="Transport" />
         </binding>
+        <!--Used by SharePoint Add-in-->
+        <binding name="secureBinding1">
+          <security mode="Transport" />
+        </binding>
       </basicHttpBinding>
     </bindings>
     <protocolMapping>
-      <add binding="basicHttpBinding" scheme="https" bindingConfiguration="secureBinding" />
+      <add binding="basicHttpBinding" scheme="https" bindingConfiguration="secureBinding1" />
     </protocolMapping>
   </system.serviceModel>
 </configuration>
