--- a/src/ajs.1/ajs.1.csproj
+++ b/src/ajs.1/ajs.1.csproj
@@ -33,6 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <None Include=".gitignore" />
     <None Include="App.config" />
     <None Include="bower.json" />
     <None Include="README.md" />
