--- a/src/ajs-sp-addInWeb/Web.config
+++ b/src/ajs-sp-addInWeb/Web.config
@@ -9,6 +9,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="ClientSecret" value="kx9XmUiU1vN9WoBokY4B0EftT1o2SIITRGwEScdRYEg=" />
+    <add key="ClientId" value="ca3c5c3c-62b5-463d-8d65-5db0d249f1a1" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
@@ -59,10 +61,22 @@
         <binding name="secureBinding1">
           <security mode="Transport" />
         </binding>
+        <!--Used by SharePoint Add-in-->
+        <binding name="secureBinding2">
+          <security mode="Transport" />
+        </binding>
+        <!--Used by SharePoint Add-in-->
+        <binding name="secureBinding3">
+          <security mode="Transport" />
+        </binding>
+        <!--Used by SharePoint Add-in-->
+        <binding name="secureBinding4">
+          <security mode="Transport" />
+        </binding>
       </basicHttpBinding>
     </bindings>
     <protocolMapping>
-      <add binding="basicHttpBinding" scheme="https" bindingConfiguration="secureBinding1" />
+      <add binding="basicHttpBinding" scheme="https" bindingConfiguration="secureBinding4" />
     </protocolMapping>
   </system.serviceModel>
 </configuration>
